<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.geoserver.security</groupId>
    <artifactId>sec-iride</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>GeoServer CSI-Piemonte Iride2 Plugin</name>
    <description>
        org.geoserver.security.sec-iride is a GeoServer security provider plugin
        used to retrieve authorization roles (and eventually other authorization informations)
        from CSI-Piemonte IRIDE2 Authorization Service
    </description>

    <url>https://github.com/geosolutions-it/csi-sira/tree/master/security/sec-iride</url>
    <inceptionYear>2016</inceptionYear>

    <organization>
        <name>CSI-Piemonte</name>
        <url>http://www.csipiemonte.it</url>
    </organization>

    <developers>
        <developer>
          <id>CORNACCHIA Simone 71740</id>
          <name>Simone Cornacchia</name>
          <email>simone.cornacchia AT assioma.net</email>
          <organization>Assioma.net</organization>
          <organizationUrl>http://www.assioma.net</organizationUrl>
          <roles>
            <role>architect</role>
            <role>developer</role>
          </roles>
          <timezone>+1</timezone>
        </developer>
        <developer>
          <id>SANMARTINO Diego 1647</id>
          <name>Diego Sanmartino</name>
          <email>diego.sanmartino AT csi.it</email>
          <organization>CSI-Piemonte</organization>
          <organizationUrl>http://www.csipiemonte.it</organizationUrl>
          <roles>
            <role>architect</role>
            <role>developer</role>
          </roles>
          <timezone>+1</timezone>
        </developer>
    </developers>

    <properties>
        <!-- Java Version -->
        <java.version>1.7</java.version>

        <!-- Dependencies -->
        <gs.version>2.8-SNAPSHOT</gs.version>

        <!-- Testing -->
        <test.exclude.pattern>none</test.exclude.pattern>
        <test.maxHeapSize>512M</test.maxHeapSize>
        <test.maxPermSize>128M</test.maxPermSize>
        <jvm.opts />
        <java.awt.headless>true</java.awt.headless>
        <remoteOwsTests>false</remoteOwsTests>
        <test.allow.failure.ignore>false</test.allow.failure.ignore>

        <!-- Build -->
        <maven.build.timestamp.format>dd-MMM-yyyy HH:mm</maven.build.timestamp.format>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>
    </properties>

    <repositories>
        <repository>
            <id>boundless</id>
            <name>Boundless Maven Repository</name>
            <url>http://repo.boundlessgeo.com/main</url>
            <!-- contains snapshot and release (including third-party-dependences) -->
            <!-- Restlet maven Repository (http://maven.restlet.org) -->
            <!-- ucar (https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases) -->
            <!-- geosolutions (http://maven.geo-solutions.it/) -->
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>

        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>http://download.osgeo.org/webdav/geotools/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>maven-restlet</id>
            <name>Restlet Maven Repository</name>
            <url>http://maven.restlet.org</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>geosolutions</id>
            <name>GeoSolutions Repository</name>
            <url>http://maven.geo-solutions.it</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- GeoServer -->
        <dependency>
            <groupId>org.geoserver</groupId>
            <artifactId>gs-main</artifactId>
            <version>${gs.version}</version>
        </dependency>
        <!-- TODO: check if the following dependency is really needed -->
        <dependency>
            <groupId>org.geoserver</groupId>
            <artifactId>gs-main</artifactId>
            <version>${gs.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.geoserver.web</groupId>
            <artifactId>gs-web-sec-core</artifactId>
            <version>${gs.version}</version>
        </dependency>

        <!-- Utilities -->
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
		<!-- Google Guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>17.0</version>
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- compilation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <!--debug>true</debug-->
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- versioning -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.2.2</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <!-- resources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- unit testing -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <excludes>
                        <exclude>${test.exclude.pattern}</exclude>
                    </excludes>
                    <forkMode>once</forkMode>
                    <argLine>-Xmx${test.maxHeapSize} -XX:MaxPermSize=${test.maxPermSize} -enableassertions ${jvm.opts} -Djava.awt.headless=${java.awt.headless} -DremoteOwsTests=${remoteOwsTests}</argLine>
                    <printSummary>true</printSummary>
                    <testFailureIgnore>${test.allow.failure.ignore}</testFailureIgnore>
                </configuration>
            </plugin>

            <!-- eclipse ide integration -->
            <plugin>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <downloadSources>false</downloadSources>
                    <additionalProjectnatures>
                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
                    </additionalProjectnatures>
                </configuration>
            </plugin>

            <!-- initialize git revision info -->
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <!-- https://github.com/ktoso/maven-git-commit-id-plugin -->
                <configuration>
                    <dotGitDirectory>${project.basedir}/../../.git</dotGitDirectory>
                    <prefix>build</prefix>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                    <skipPoms>false</skipPoms>
                    <verbose>false</verbose>
                </configuration>
            </plugin>

            <!-- packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <GeoServerModule>extension</GeoServerModule>
                            <Application-Name>${artifactId}-${version}</Application-Name>
                            <Project-Version>${project.version}</Project-Version>
                            <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                            <Git-Revision>${build.commit.id}</Git-Revision>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
